--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 </head> 
 <body>
 
-<body><h3>Example of a Simple </h3> 
+<body><h3>Improved case </h3>
 <h1>Mortgage Calculator</h1> 
 <div class="simp-div">
 	<form name='mortgagecalc' method='POST'>
 	<p>How much will you be borrowing?<br/>
-	<input type='text'  name='loan' size=10> <span class="simp-error" id="loanError"></span></p>
+	<input type='text'  name='loan' size=10 onkeypress="return validNumber(event)" onPaste="return false"> <span class="simp-error" id="loanError"></span></p>
 	<p>What will be the term of this mortgage (in years)?<br/>
-	<input type='text'  name='years' size=5> <span class="simp-error" id="yearsError"></span></p>
+	<input type='text'  name='years' size=5 onkeypress="return validNumber(event)" onPaste="return false"> <span class="simp-error" id="yearsError"></span></p>
 	<p>What will be the interest rate?<br/>
-	<input type='text'  name='rate' size=5> <span class="simp-error" id="rateError"></span></p>
+	<input type='text'  name='rate' size=5 onkeypress="return validNumber(event)" onPaste="return false"> <span class="simp-error" id="rateError"></span></p>
 	<input type='button' onClick="return cusPayment()" value='Calculate'>  <input type='button' onClick="return cusPaymentReset()" value='Reset'>
 	</form>
 	<br/>
